--- a/zwift-pace-partners.Rmd
+++ b/zwift-pace-partners.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Graded Training with Pace Partners"
+title: "Progressive Resistance Training with Pace Partners"
 author: "Peter Higgins"
 date: "5/31/2021"
 output: html_document
@@ -23,7 +23,7 @@ Pace Partners are always-on group rides in Watopia, rotating between 3 routes, a
 
 ![Image from Zwift Insider, Mar 28 2021](images/pace-partner.jpg)
 
-So why can't we all have our own custom Pace Partners? It would be awesome!
+So why can't we all have our **own** custom Pace Partners? It would be awesome!
 
 Zwifters love the idea of their own customized Pace Partners, as they know it is very motivating to chase someone just a bit faster than you.
 
@@ -31,7 +31,7 @@ However, this would be very computationally expensive for up to 46,000+ riders. 
 
 But there is a reasonable approximation that ***could*** be created.
 
-## Why Does Everyone *Want* Their Own Custom Pace Partner?
+## Why Does Everyone ***Want*** Their Own Custom Pace Partner?
 
 Because it is really effective training to push yourself to keep up with someone who is a little bit faster than you. Out on the road IRL, it is a lot of fun to catch someone just a little bit faster than you, and to try to hang on as long as you can. You can stretch yourself, but not too much, and hide in the draft when you need to rest. It would be ideal to train with someone who is always (just a little bit) faster than you, and try to keep up. This is what is called Progressive Resistance Exercise (PRE).
 
@@ -190,19 +190,24 @@ The Buffalo Bike and the Big Wheel bike would be a great start, and each offers 
     \
     ![Pennyfarthing Bike](images/pennyfarthing.png)
 
-1.  Beach Cruiser with fat tires, spilling sand\
+2.  Beach Cruiser with fat tires, spilling sand\
     ![Beach Cruiser Bike](images/beach-cruiser.jpg)
-2.  Electra flat-foot Townie bike with baskets full of groceries
-     ![Electra Townie Bike](images/townie.jpg)
-3.  Bianchi City Vintage with a rear-mounted espresso machine
-     ![Bianchi City Bike](images/bianchi.jpg)
-4.  Full Dutch Grandma bike (Omafiets) with basket, panniers, mudguards, and baby trailer\
-     ![Omafiets Bike](images/omafiets.jpg)
-5.  Cargo bike (could be a front-loader (bakfiet) - like the Larry vs. Harry Bullitt or a longtail like the Surly Big Fat Dummy)\
- ![Bakfiet Bike](images/bullitt.jpg)
 
- ![Surly Big Fat Dummy Bike](images/surly.jpg)
- 
+3.  Electra flat-foot Townie bike with baskets full of groceries\
+    ![Electra Townie Bike](images/townie.jpg)
+
+4.  Bianchi City Vintage with a rear-mounted espresso machine (imagine the Lalit Bianca mounted on the rear rack for proper Italian touring).\
+    ![Bianchi City Bike](images/bianchi.jpg)
+
+![Italian Espresso Machine](images/espresso.jpg)
+
+4.  Full Dutch Grandma bike (Omafiets) with basket, panniers, mudguards, and baby trailer\
+    ![Omafiets Bike](images/omafiets.jpg)
+5.  Cargo bike (could be a front-loader (bakfiet) - like the Larry vs. Harry Bullitt or a longtail like the Surly Big Fat Dummy)\
+    ![Bakfiet Bike](images/bullitt.jpg)
+
+![Surly Big Fat Dummy Bike](images/surly.jpg)
+
 We need 6 more training bikes in addition to the Gravel and Mountain bikes. Which would you like to see, and in what order? Mark which end is low vs high resistance, and let us know in the comments.
 
 ## What About PRE for Runners?
@@ -224,19 +229,19 @@ Zwift HQ has already built one VRL, the Astronaut suit from April Fool's day 202
 These Visual Resistance Levels (VRLs) could be simple, visible ways to slow down a runner. These could include:
 
 1.  Running while wearing military boots instead of modern lightweight running shoes\
-     ![Running with Army Boots](images/army-boots.jpg)
+    ![Running with Army Boots](images/army-boots.jpg)
 2.  Running with a full backpack\
-     ![Running with a Backpack](images/backpack.jpg)
+    ![Running with a Backpack](images/backpack.jpg)
 3.  Running with a mini-parachute\
-     ![Running with a Parachute](images/parachute.jpg)
+    ![Running with a Parachute](images/parachute.jpg)
 4.  Running with a weighted vest\
-     ![Running with a Weighted Vest](images/weighted-vest.jpg)
+    ![Running with a Weighted Vest](images/weighted-vest.jpg)
 5.  Rnning while pushing a pram/stroller\
-     ![BRunning with a Stroller](images/stroller.jpg)
+    ![BRunning with a Stroller](images/stroller.jpg)
 6.  Running in an Astronaut suit (April 2021)\
-     ![Running in an Astronaut Suit](images/astronaut.jpg)
+    ![Running in an Astronaut Suit](images/astronaut.jpg)
 7.  Running while pulling a trailer/ pull a ball and chain\
-     ![Running with a Ball and Chain](images/ball-chain.jpg)
+    ![Running with a Ball and Chain](images/ball-chain.jpg)
 
 Please note which suggestions you like, and suggest others (and the order they should go in for progressive resistance steps, with the low and high resistance marked) in the comments below.
 
